finalizada a tela de busca

--- a/app/less/media.less
+++ b/app/less/media.less
@@ -119,6 +119,12 @@
       margin-left: 28px;
     }
   }
+
+  .mask-iput {
+    .txtSearch {
+      width: 85%;
+    }
+  }
 }
 
 @media (max-width: 375px) {
