--- a/app/css/main.css
+++ b/app/css/main.css
@@ -227,6 +227,9 @@
     margin-right: 28px;
     margin-left: 28px;
   }
+  .mask-iput .txtSearch {
+    width: 85%;
+  }
 }
 @media (max-width: 375px) {
   body #wrapper {
@@ -285,7 +288,7 @@
   top: 0;
   z-index: 2;
   float: right;
-  display: block;
+  display: none;
   width: 100%;
   height: 100%;
   background-color: #fff;
@@ -303,28 +306,18 @@
   margin: 0 auto;
 }
 .container-result {
-  min-height: 350px;
+  margin-top: 50px;
+  margin-bottom: 60px;
+  width: 100%;
   height: 420px;
-  margin-bottom: 20px;
+  min-height: 350px;
   overflow: scroll;
   overflow-x: hidden;
+}
+.mask-iput {
   width: 100%;
-  margin-top: 50px;
-}
-.result {
-  width: 50%;
-  height: 350px;
-  line-height: 150px;
-  float: left;
-  padding-top: 50px;
-  padding-right: 50px;
-}
-.txtSearch {
-  position: relative;
+  height: 100px;
   display: block;
-  width: 100%;
-  height: 80px;
-  border-width: 10px;
   border-top: 0;
   border-left: 0;
   border-right: 0;
@@ -333,13 +326,40 @@
   border-color: #e4e4e4;
   padding-bottom: 20px;
   margin-bottom: 10px;
+}
+.txtSearch {
+  position: relative;
+  display: block;
+  width: 90%;
+  height: 80px;
+  border-width: 10px;
+  border: 0;
   font-size: 3.75em;
   color: black;
   text-transform: uppercase;
+  float: left;
+}
+.close-input {
+  margin-top: 30px;
+  width: 32px;
+  height: 31px;
+  float: right;
+  background-image: url(../img/close-input.png);
+  background-repeat: no-repeat;
+  text-indent: -999999px;
+  white-space: nowrap;
 }
 .lblSearch {
   font-size: 1.5625em;
   color: #b1b1b1;
+}
+.result {
+  width: 50%;
+  height: 350px;
+  line-height: 150px;
+  float: left;
+  padding-top: 50px;
+  padding-right: 50px;
 }
 .img-result {
   float: left;
@@ -361,6 +381,9 @@
        box-sizing: border-box;
   text-decoration: none;
   outline: 0;
+}
+.clear {
+  clear: both;
 }
 .ir {
   text-indent: -999999px;
