--- a/app/less/search.less
+++ b/app/less/search.less
@@ -4,7 +4,7 @@
   top: 0;
   z-index: 2;
   float: right;
-  display: block;
+  display: none;
   width: 100%;
   height: 100%;
   background-color: #fff;
@@ -25,13 +25,55 @@
 }
 
 .container-result {
-  min-height: 350px;
+  margin-top: 50px;
+  margin-bottom: 60px;
+  width: 100%;
   height: 420px;
-  margin-bottom: 20px;
+  min-height: 350px;
   overflow: scroll;
   overflow-x: hidden;
+}
+
+.mask-iput{
   width: 100%;
-  margin-top: 50px;
+  height: 100px;
+  display: block;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 3px;
+  border-style: solid;
+  border-color: #e4e4e4;
+  padding-bottom: 20px;
+  margin-bottom: 10px;
+}
+
+.txtSearch {
+  position: relative;
+  display: block;
+  width: 90%;
+  height: 80px;
+  border-width: 10px;
+  border: 0;
+  .font-size(60);
+  color: black;
+  text-transform: uppercase;
+  float: left;
+}
+
+.close-input {
+  margin-top: 30px;
+  width: 32px;
+  height: 31px;
+  float: right;
+  background-image: url(../img/close-input.png);
+  background-repeat: no-repeat;
+  .ir;
+}
+
+.lblSearch {
+  .font-size(25);
+  color: #b1b1b1;
 }
 
 .result {
@@ -43,29 +85,6 @@
   padding-right: 50px;
 }
 
-.txtSearch {
-  position: relative;
-  display: block;
-  width: 100%;
-  height: 80px;
-  border-width: 10px;
-  border-top: 0;
-  border-left: 0;
-  border-right: 0;
-  border-bottom: 3px;
-  border-style: solid;
-  border-color: #e4e4e4;
-  padding-bottom: 20px;
-  margin-bottom: 10px;
-  .font-size(60);
-  color: black;
-  text-transform: uppercase;
-}
-
-.lblSearch {
-  .font-size(25);
-  color: #b1b1b1;
-}
 
 .img-result {
   float: left;
