estrutura html e começo dos estilos na tela de categorias

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -5,6 +5,7 @@
 @import 'color.less';
 @import 'mixins.less';
 @import 'search.less';
+@import 'categories.less';
 
 *,
 *:before,
@@ -47,13 +48,6 @@ ul, li{
   background-image: url(../img/bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-}
-
-.align{
-  margin: 0 auto;
-  width: 1240px;
-  overflow: hidden;
-  padding: 20px;
 }
 
 .carrousel {
