--- a/app/css/main.css
+++ b/app/css/main.css
@@ -311,7 +311,7 @@
   width: 100%;
   height: 420px;
   min-height: 350px;
-  overflow: scroll;
+  overflow: visible;
   overflow-x: hidden;
 }
 .mask-iput {
@@ -374,6 +374,30 @@
   font-size: 1.25em;
   font-weight: bold;
 }
+.align-categories {
+  margin: 0 auto;
+  width: 70%;
+  overflow: hidden;
+  padding: 20px;
+}
+.title-categories {
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: 0;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  font-size: 3.125em;
+  float: left;
+}
+.container-title-categories {
+  width: 200px;
+  float: right;
+}
+.icon-categories {
+  width: 57px;
+  height: 53px;
+  float: right;
+}
 *,
 *:before,
 *:after {
@@ -412,12 +436,6 @@ li {
   background-image: url(../img/bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-}
-.align {
-  margin: 0 auto;
-  width: 1240px;
-  overflow: hidden;
-  padding: 20px;
 }
 .carrousel {
   width: 100%;
