adicionado grid danamico e responsivo, estrutura e estilos na página de categorias

--- a/app/less/categories.less
+++ b/app/less/categories.less
@@ -1,8 +1,14 @@
 .align-categories{
   margin: 0 auto;
-  width: 70%;
-  overflow: hidden;
-  padding: 20px;
+  width: 1240px;
+  height: 100%;
+  background-color: lightgreen;
+}
+
+.categories-head {
+  width: 100%;
+  height: 100px;
+  background-color: lightgreen;
 }
 
 .title-categories {
@@ -24,4 +30,39 @@
   width: 57px;
   height: 53px;
   float: right;
+}
+
+.containter-products {
+  margin: 0;
+  width: 100%;
+  height: 600px;
+  background-color: lightblue;
+  overflow: visible;
+  // overflow-x: hidden;
+}
+
+.product {
+  width: 250px;
+  height: 250px;
+  margin: 5px;
+  background-color: red;
+  float: left;
+}
+
+.minimum {
+
+}
+
+.medium {
+  width: 550px;
+}
+
+.maximum {
+
+}
+
+.categories-foot {
+  width: 100%;
+  height: 100px;
+  background-color: beige;
 }
