--- a/app/css/main.css
+++ b/app/css/main.css
@@ -129,6 +129,26 @@
   bottom: 20px;
   right: 25px;
 }
+@media (max-width: 1450px) {
+  #wrapper .align-categories {
+    width: 980px;
+  }
+}
+@media (max-width: 1180px) {
+  #wrapper .align-categories {
+    width: 768px;
+  }
+}
+@media (max-width: 980px) {
+  #wrapper .align-categories {
+    width: 667px;
+  }
+}
+@media (max-width: 870px) {
+  #wrapper .align-categories {
+    width: 570px;
+  }
+}
 @media (max-width: 768px), (max-height: 550px) {
   body {
     font-size: 70%;
@@ -198,16 +218,18 @@
   }
 }
 @media (width: 667px) and (orientation: landscape) {
-  body #wrapper {
-    height: 500px;
-  }
-  body #wrapper .carrousel .myDots {
+  body #wrapper .myDots {
     right: 150px;
   }
 }
+@media (max-width: 667px) {
+  #wrapper .align-categories {
+    width: 570px;
+  }
+}
 @media (max-width: 570px) {
-  body #wrapper {
-    height: 500px;
+  #wrapper .align-categories {
+    width: 430px;
   }
   .items-navigation {
     margin-left: 0;
@@ -216,6 +238,9 @@
 @media (max-width: 430px) {
   body {
     font-size: 60%;
+  }
+  #wrapper .align-categories {
+    width: 375px;
   }
   .item-center {
     margin-left: 30px;
@@ -232,19 +257,26 @@
   }
 }
 @media (max-width: 375px) {
-  body #wrapper {
-    height: 600px;
+  #wrapper .align-categories {
+    width: 340px;
   }
 }
 @media (max-width: 340px) {
   body {
     font-size: 50%;
   }
+  #wrapper .align-categories {
+    width: 300px;
+  }
   .item-center {
     margin-left: 15px;
   }
   .carrousel .myDots {
     right: 35px;
+  }
+  .carrousel .myDots li {
+    margin-right: 24px;
+    margin-left: 24px;
   }
 }
 @media (max-height: 550px) {
@@ -376,9 +408,14 @@
 }
 .align-categories {
   margin: 0 auto;
-  width: 70%;
-  overflow: hidden;
-  padding: 20px;
+  width: 1240px;
+  height: 100%;
+  background-color: lightgreen;
+}
+.categories-head {
+  width: 100%;
+  height: 100px;
+  background-color: lightgreen;
 }
 .title-categories {
   margin-top: 20px;
@@ -397,6 +434,28 @@
   width: 57px;
   height: 53px;
   float: right;
+}
+.containter-products {
+  margin: 0;
+  width: 100%;
+  height: 600px;
+  background-color: lightblue;
+  overflow: visible;
+}
+.product {
+  width: 250px;
+  height: 250px;
+  margin: 5px;
+  background-color: red;
+  float: left;
+}
+.medium {
+  width: 550px;
+}
+.categories-foot {
+  width: 100%;
+  height: 100px;
+  background-color: beige;
 }
 *,
 *:before,
