--- a/app/less/media.less
+++ b/app/less/media.less
@@ -1,3 +1,35 @@
+@media (max-width: 1450px) {
+  #wrapper {
+    .align-categories {
+      width: 980px;
+    }
+  }
+}
+
+@media (max-width: 1180px) {
+  #wrapper {
+    .align-categories {
+      width: 768px;
+    }
+  }
+}
+
+@media (max-width: 980px) {
+  #wrapper {
+    .align-categories {
+      width: 667px;
+    }
+  }
+}
+
+@media (max-width: 870px) {
+  #wrapper {
+    .align-categories {
+      width: 570px;
+    }
+  }
+}
+
 @media (max-width: 768px), (max-height: 550px) {
   body{
     font-size: 70%;
@@ -85,20 +117,27 @@
 }
 
 @media (width: 667px) and (orientation: landscape) {
-    body{
+  body{
     #wrapper {
-      height: 500px;
-      .carrousel .myDots{
-        right: 150px
+      .myDots{
+        right: 150px;
       }
     }
   }
 }
 
+@media (max-width: 667px){
+  #wrapper {
+    .align-categories {
+      width: 570px;
+    }
+  }
+}
+
 @media (max-width: 570px) {
-  body{
-    #wrapper {
-      height: 500px;
+  #wrapper {
+    .align-categories {
+      width: 430px;
     }
   }
 
@@ -108,6 +147,12 @@
 @media (max-width: 430px) {
   body{
     font-size: 60%;
+  }
+
+  #wrapper {
+    .align-categories {
+      width: 375px;
+    }
   }
 
   .item-center{ margin-left: 30px;}
@@ -128,9 +173,9 @@
 }
 
 @media (max-width: 375px) {
-  body{
-    #wrapper {
-      height: 600px;
+  #wrapper {
+    .align-categories {
+      width: 340px;
     }
   }
 }
@@ -140,10 +185,20 @@
     font-size: 50%;
   }
 
+  #wrapper {
+    .align-categories {
+      width: 300px;
+    }
+  }
+
   .item-center { margin-left: 15px;}
 
   .carrousel {
     .myDots { right: 35px }
+    .myDots li{
+      margin-right: 24px;
+      margin-left: 24px;
+    }
   }
 }
 
