começo da estrutura da pagina de categorias

--- a/app/less/categories.less
+++ b/app/less/categories.less
@@ -2,13 +2,11 @@
   margin: 0 auto;
   width: 1240px;
   height: 100%;
-  background-color: lightgreen;
 }
 
 .categories-head {
   width: 100%;
   height: 100px;
-  background-color: lightgreen;
 }
 
 .title-categories {
@@ -22,8 +20,16 @@
 }
 
 .container-title-categories{
-  width: 200px;
+  width: 190px;
+  height: 60px;
+  line-height: 60px;
   float: right;
+}
+
+.breadcumb {
+  width: 110px;
+  float: left;
+  color: #c1c1c1;
 }
 
 .icon-categories {
@@ -35,34 +41,41 @@
 .containter-products {
   margin: 0;
   width: 100%;
-  height: 600px;
-  background-color: lightblue;
-  overflow: visible;
-  // overflow-x: hidden;
+  height: 520px;
+  overflow: hidden;
 }
 
 .product {
+  margin: 5px;
   width: 250px;
   height: 250px;
-  margin: 5px;
-  background-color: red;
   float: left;
+  background-color: white;
 }
 
 .minimum {
-
+  width: 23.9%;
 }
 
 .medium {
-  width: 550px;
+  width: 48%;
 }
 
 .maximum {
-
+  width: 73%;
 }
 
 .categories-foot {
   width: 100%;
   height: 100px;
-  background-color: beige;
+}
+
+.load-more {
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 20px;
+  width: 280px;
+  display: block;
+  .font-size(30);
+  text-align: center;
 }
