--- a/app/css/main.css
+++ b/app/css/main.css
@@ -138,10 +138,22 @@
   #wrapper .align-categories {
     width: 768px;
   }
+  #wrapper .minimum {
+    width: 30%;
+  }
+  #wrapper .maximum {
+    width: 67%;
+  }
 }
 @media (max-width: 980px) {
   #wrapper .align-categories {
     width: 667px;
+  }
+  #wrapper .minimum {
+    width: 38%;
+  }
+  #wrapper .maximum {
+    width: 98%;
   }
 }
 @media (max-width: 870px) {
@@ -152,6 +164,9 @@
 @media (max-width: 768px), (max-height: 550px) {
   body {
     font-size: 70%;
+  }
+  #wrapper .medium {
+    width: 98%;
   }
   #container-menu-drop-down {
     top: 0;
@@ -231,6 +246,9 @@
   #wrapper .align-categories {
     width: 430px;
   }
+  #wrapper .minimum {
+    width: 50%;
+  }
   .items-navigation {
     margin-left: 0;
   }
@@ -241,6 +259,10 @@
   }
   #wrapper .align-categories {
     width: 375px;
+  }
+  #wrapper .minimum,
+  #wrapper .medium {
+    width: 98%;
   }
   .item-center {
     margin-left: 30px;
@@ -410,12 +432,10 @@
   margin: 0 auto;
   width: 1240px;
   height: 100%;
-  background-color: lightgreen;
 }
 .categories-head {
   width: 100%;
   height: 100px;
-  background-color: lightgreen;
 }
 .title-categories {
   margin-top: 20px;
@@ -427,8 +447,15 @@
   float: left;
 }
 .container-title-categories {
-  width: 200px;
+  width: 190px;
+  height: 60px;
+  line-height: 60px;
   float: right;
+}
+.breadcumb {
+  width: 110px;
+  float: left;
+  color: #c1c1c1;
 }
 .icon-categories {
   width: 57px;
@@ -438,24 +465,37 @@
 .containter-products {
   margin: 0;
   width: 100%;
-  height: 600px;
-  background-color: lightblue;
-  overflow: visible;
+  height: 520px;
+  overflow: hidden;
 }
 .product {
+  margin: 5px;
   width: 250px;
   height: 250px;
-  margin: 5px;
-  background-color: red;
   float: left;
+  background-color: white;
+}
+.minimum {
+  width: 23.9%;
 }
 .medium {
-  width: 550px;
+  width: 48%;
+}
+.maximum {
+  width: 73%;
 }
 .categories-foot {
   width: 100%;
   height: 100px;
-  background-color: beige;
+}
+.load-more {
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 20px;
+  width: 280px;
+  display: block;
+  font-size: 1.875em;
+  text-align: center;
 }
 *,
 *:before,
