--- a/app/less/media.less
+++ b/app/less/media.less
@@ -11,6 +11,14 @@
     .align-categories {
       width: 768px;
     }
+
+    .minimum {
+      width: 30%;
+    }
+
+    .maximum {
+      width: 67%;
+    }
   }
 }
 
@@ -18,6 +26,14 @@
   #wrapper {
     .align-categories {
       width: 667px;
+    }
+
+    .minimum {
+      width: 38%;
+    }
+
+    .maximum {
+      width: 98%;
     }
   }
 }
@@ -33,6 +49,12 @@
 @media (max-width: 768px), (max-height: 550px) {
   body{
     font-size: 70%;
+  }
+
+  #wrapper {
+    .medium {
+      width: 98%;
+    }
   }
 
   #container-menu-drop-down  {
@@ -139,6 +161,10 @@
     .align-categories {
       width: 430px;
     }
+
+    .minimum {
+      width: 50%;
+    }
   }
 
   .items-navigation { margin-left: 0;}
@@ -152,6 +178,11 @@
   #wrapper {
     .align-categories {
       width: 375px;
+    }
+
+    .minimum,
+    .medium {
+      width: 98%;
     }
   }
 
